# Logger

./: Cargo.toml
src/: logger.rs  main.rs  middlewares.rs  utils.rs
src/utils/: logger.rs  rolling_file_appender.rs
