[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "logger"
path = "src/main.rs"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[dependencies]
actix-web = "4.5.1"
log = "0.4.21"
log-mdc = "0.1.0"
log4rs = { version = "1.3.0", features = ["background_rotation", "chrono", "compound_policy", "file_appender",
    "console_appender", "delete_roller", "size_trigger", "time_trigger", "fixed_window_roller", "rolling_file_appender"]}
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }
futures = "0.3.30"
